--- a/test.html
+++ b/test.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- 
+        1:git init 
+        2:git status
+        3:git add *
+        4:git commit -m "desciption"
+        5:git remote add origin https://github.com/.... //连接远端github方法；
+        6:git push -u origin master //第一次连接远端github
+
+        --------------------
+        7:git branch //查看当前所有的分支
+        8:git checkout branchname
+        
+     -->
 </body>
 </html>
