样式的权重测试1

--- a/样式的权重值测试.html
+++ b/样式的权重值测试.html
@@ -25,6 +25,8 @@
 </head>
 <body>
     <div id="box2" class="box1"></div>
-    <!-- <div id="box2">!important>id选择器>class选择器>标签选择器</div> -->
+    <!-- <div id="box2">
+        !important>id选择器>class选择器>标签选择器
+    </div> -->
 </body>
 </html>
