元素的塌陷问题的解决

--- a/元素的塌陷问题.html
+++ b/元素的塌陷问题.html
@@ -32,7 +32,8 @@
     <div id="box">
         <div id="box1">box1</div>
         <div id="box2">box2</div>
-        <div>标题</div>
+        <div>标题，当我们使用float设置浮动的时候，
+            出现的元素的塌陷问题，我们可以对容器设置高度，从而使容器被撑起来</div>
     </div>
 </body>
 </html>
