透明度opacity的使用

--- a/测试opacity.html
+++ b/测试opacity.html
@@ -10,19 +10,11 @@
             width: 200px;
             height: 200px;
             background: red;
-            /* 注意使用display: none的时候，当前元素会脱离文档流  */
-            display: none;
-        }
-
-        .box2{
-            width: 200px;
-            height: 200px;
-            background: yellow;
+            opacity: 0.1;
         }
     </style>
 </head>
 <body>
     <div class="box1"></div>
-    <div class="box2"></div>
 </body>
 </html>
