--- a/测试opacity.html
+++ b/测试opacity.html
@@ -10,11 +10,17 @@
             width: 200px;
             height: 200px;
             background: red;
-            opacity: 0.1;
+            opacity: 0;
+        }
+        .box2{
+            width: 200px;
+            height: 200px;
+            background: green;
         }
     </style>
 </head>
 <body>
     <div class="box1"></div>
+    <div class="box2"></div>
 </body>
 </html>
