--- a/tmall/index.html
+++ b/tmall/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>天猫navigator2</title>
+    <link rel="stylesheet" href="./CSS/common.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <style>    
         #toolbar{
             background: #000;
@@ -27,7 +29,6 @@
 
 <body>
     <div id="container">
-
         <div id="navigator">
             <ul class="menue-login">
                 <li><span>喵，欢迎来天猫</span></li>
