添加小图标和导航栏前面的图标

--- a/tmall/index.html
+++ b/tmall/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>天猫navigator2</title>
+    <title>天猫tmall.com--理想生活上天猫</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/common.css">
     <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./font/iconfont.css">
     <style>    
         #toolbar{
             background: #000;
@@ -36,20 +38,35 @@
                 <li><a href="">免费注册</a></li>
             </ul>
             <ul class="menue-nav">
-                <li><a href="">网站导航</a></li>
-                <li><a href="">商家支持</a></li>
+                <li class="tringle">
+                    <i class="iconfont icon-daohang"></i>
+                    <a href="">网站导航</a>
+                    <div class="arrow"></div>
+                </li>
+                <li class="tringle">
+                    <a href="">商家支持</a>
+                    <div class="arrow"></div>
+                </li>
                 <li><a href="">淘宝网</a></li>
-                <li><a href="">手机版</a></li>
-                <li class="item">
+                <li>
+                    <i class="iconfont icon-shouji"></i>
+                    <a href="">手机版</a>
+                </li>
+                <li class="item tringle">
                     <a href="">收藏夹</a>
+                    <div class="arrow"></div>
                     <ul class="submenue">
                         <li><a href="">收藏的宝贝</a></li>
                         <li><a href="">收藏的店铺</a></li>
                     </ul>
                 </li>
-                <li><a href="">购物车0件</a></li>
-                <li class="item">
+                <li>
+                    <i class="iconfont icon-gouwuchekong"></i>
+                    <a href="">购物车0件</a>
+                </li>
+                <li class="item tringle">
                     <a href="">我的淘宝</a>
+                    <div class="arrow"></div>
                     <ul class="submenue">
                         <li><a href="">已买到的宝贝</a></li>
                         <li><a href="">已卖出的宝贝</a></li>
@@ -58,9 +75,9 @@
             </ul>
         </div>
 
-        <div id="toolbar">
+        <!-- <div id="toolbar">
             <center>工具栏</center>
-        </div>
+        </div> -->
         <!-- <span id="testspan">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span> -->
 
 
