--- a/tmall/index.html
+++ b/tmall/index.html
@@ -51,6 +51,10 @@
                 <li>
                     <i class="iconfont icon-shouji"></i>
                     <a href="">手机版</a>
+                    <div class="arrow1"></div>
+                    <div class="two-dimensional-barcode">
+                        <img src="./images/erweima.png" alt="淘宝手机版二维码">
+                    </div>
                 </li>
                 <li class="item tringle">
                     <a href="">收藏夹</a>
