--- a/tmall/index.html
+++ b/tmall/index.html
@@ -32,7 +32,7 @@
                 <li><a href="">免费注册</a></li>
             </ul>
             <ul class="menue-nav">
-                <li class="tringle item">
+                <li class="tringle item icon-owner">
                     <i class="iconfont icon-daohang"></i>
                     <a href="">网站导航</a>
                     <div class="arrow"></div>
@@ -42,7 +42,7 @@
                     <div class="arrow"></div>
                     <div class="bussi-suppor-menue submenue">
                         <span>商家：</span>
-                        <ul class="submenue-bussi-help" style="height: 85px;">
+                        <ul class="submenue-bussi-help" style="height: 93px;">
                             <li><a href="">商家中心</a></li>
                             <li><a href="">天猫规则</a></li>
                             <li><a href="">商家入驻</a></li>
@@ -53,14 +53,14 @@
                             <li><a href="">喵言喵语</a></li>
                         </ul>
                         <span>帮助：</span>
-                        <ul class="submenue-bussi-help" style="height:25px">
+                        <ul class="submenue-bussi-help" style="height:22px">
                             <li><a href="">帮助中心</a></li>
                             <li><a href="">问商友</a></li>
                         </ul>
                     </div>
                 </li>
                 <li><a href="">淘宝网</a></li>
-                <li class="toggle-phone">
+                <li class="toggle-phone icon-owner">
                     <i class="iconfont icon-shouji"></i>
                     <a href="">手机版</a>
                     <div class="tringle-self"></div>
@@ -76,7 +76,7 @@
                         <li><a href="">收藏的店铺</a></li>
                     </ul>
                 </li>
-                <li>
+                <li class="icon-owner">
                     <i class="iconfont icon-gouwuchekong"></i>
                     <a href="">购物车0件</a>
                 </li>
