测试了一些元素的使用

--- a/HTML_CSS/body背景.html
+++ b/HTML_CSS/body背景.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        body{
+        /* body{
             background: pink;
             height:2000px;
         }
@@ -15,11 +15,39 @@
             width: 100px;
             height: 100px;
             background: red;
+        } */
+
+        /* html{
+            width: 100%;
+            height: 100%;
         }
+
+        body{
+            width: 100%;
+            height: 100%;
+        }
+
+        .box{
+            width: 100%;
+            height: 100%;
+            background: #ccc;
+        } */
+
+        .box{
+            position: absolute;
+            top: 0px;
+            bottom: 0px;
+            right: 0px;
+            left: 0px;
+            background: #cccccc;
+        }
+
     </style>
 </head>
 <body>
-    <div class="box1">这是box1</div>
-    <h2>这是小标题</h2>
+    <div class="box">宽高的百分比是相对于父元素而言的</div>
+
+    <!-- <div class="box1">这是box1</div>
+    <h2>这是小标题</h2> -->
 </body>
 </html>
