--- a/HTML_CSS/测试浮动后的元素的父元素怒的高度.html
+++ b/HTML_CSS/测试浮动后的元素的父元素怒的高度.html
@@ -8,23 +8,29 @@
     <style>
         body{
             margin: 0px;
+            height: 2000px;
         }
         .box1{
-            width: 500px;
-            height: 500px;
+            /* width: 500px; */
+            /* height: 500px; */
             background: pink;
+            margin-top: 50px;
+            margin-left: 50px;
+            /* height: 100%; */
         }
 
         .box2{
             width: 200px;
             height: 200px;
             background: red;
+            float: left;
+            /* display: inline; */
         }
     </style>
 </head>
 <body>
     <div class="box1">
-        <div class="box2"></div>
+        <div class="box2">测试</div>
     </div>
 </body>
 </html>
