--- a/HTML_CSS/测试文本缩进以及字间距.html
+++ b/HTML_CSS/测试文本缩进以及字间距.html
@@ -17,6 +17,7 @@
          /* white-space: nowrap; */
         overflow: hidden;
         text-overflow: ellipsis;
+        letter-spacing: 5px;
     }
     </style>
 </head>
