--- a/CSS3测试/三行布局上下高度固定中间高度自适应2.html
+++ b/CSS3测试/三行布局上下高度固定中间高度自适应2.html
@@ -4,41 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>三行布局上下固定中间自适应</title>
+    <title>三行布局上下高度固定中间高度自适应</title>
     <style>
         body{
             margin: 0px;
         }
-        body,html,.container{
+        body,html{
             height: 100%;
         }
-        .box1{
-            height: 50px;
+        .container{
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        .header{
             background: red;
-            position: absolute;
-            top: 0px;
+            height: 50px;
             width: 100%;
         }
-        .box2{
+        .content{
+            flex-grow: 1;
             background: green;
-            overflow: scroll;
+            width: 100%;
             height: 100%;
-            margin-top: 50px;
-            margin-bottom: 50px;
+            overflow: scroll;
         }
-        .box3{
-            height: 50px;
+        .footer{
             background: yellow;
-            position: absolute;
-            bottom: 0px;
+            height: 50px;
             width: 100%;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="box1"></div>
-        <div class="box2">
+        <div class="header">header</div>
+        <div class="content">
             <h1>标题</h1>
             <h1>标题</h1>
             <h1>标题</h1>
@@ -54,19 +55,8 @@
             <h1>标题</h1>
             <h1>标题</h1>
             <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-            <h1>标题</h1>
-
         </div>
-        <div class="box3"></div>
+        <div class="footer">footer</div>
     </div>
 </body>
 </html>
