--- a/JS基础/函数数组循环测试.html
+++ b/JS基础/函数数组循环测试.html
@@ -10,10 +10,108 @@
     
 
     <script>
+        
+        /*
+        for(var i=1000; i<9999;++i){
+            var a=Math.floor(i%1000%100%10);
+            var b=Math.floor(i/10%100%10);
+            var c=Math.floor(i/100%10);
+            var d=Math.floor(i/1000);
+            if(i%13==0&&(a==b+c)){
+                console.log(i);
+            }
+        }
+        */
+        /*
+        for(var i=100; i<999;++i){
+            if(i%4==2&&i%7==3&&i%9==5){
+                console.log(i);
+            }
+        }
+        */
+        /*
+        for(var i=1;i<=5; ++i){
+            for(var j=1;j<=(5-i);++j){
+                document.write("&nbsp");
+            }
+            for(var k=1; k<=i;++k){
+                document.write("*");
+                document.write(" ");
+            }
+            document.write("<br>");
+        }
+        */
+        /*
+        for(var i=1; i<=5;++i){
+            for(var j=1; j<=i;++j){
+                document.write(j+" ");
+            }
+            document.write("<br>");
+        }
+        */
+
+        /*var result=0;
+        for(var i=1;i<=10;++i){
+            var temp=1;
+            for(var j=1;j<=i;++j){
+                temp=temp*j;
+            }
+            result=result+temp;
+        }
+        console.log(result);
+        */
+        /*var result=1;
+        for(var i=1; i<=10;++i){
+            result=result*i;
+        }
+        console.log(result);*/
+
+        /*var number =parseInt(prompt("请输入一个0~6的一个数字："));
+        switch(number){
+            case 0:
+                alert("星期日");
+                break;
+            case 1:
+                alert("星期一");
+                break;
+            case 2:
+                alert("星期二");
+                break;
+            case 3:
+                alert("星期三");
+                break;
+            case 4:
+                alert("星期四");
+                break;
+            case 5:
+                alert("星期五");
+                break;
+            case 6:
+                alert("星期六");
+                break;
+            default:
+                alert("输入错误");
+                break;
+        }*/
+
+        /*var age =parseInt(prompt("请输入您的年龄："));
+        // console.log(typeof(age));
+        if(age<14){
+            document.write("儿童");
+        }else if(age>=14&&age<24){
+            document.write("青少年");
+        }else if(age>=24&&age<40){
+            document.write("青年");
+        }else if(age>=40&&age<60){
+            document.write("中年");
+        }else{
+            document.write("老年");
+        }*/
+
         // var arr = new Array(10);
         // var arr = new Array(13,4,5,634);//注意区别
         // console.log(arr);
-        var person =[{
+        /*var person =[{
             name: 'zhangsan',
             age: 20
         },{
@@ -29,7 +127,9 @@
                 console.log(person[i][j]);
             }
             console.log('------------');
-        }
+        }*/
+
+
     </script>
 </body>
 </html>
