测试了string的一些方法

--- a/JS基础/测试String的一些基本方法.html
+++ b/JS基础/测试String的一些基本方法.html
@@ -41,6 +41,32 @@
         //参数是一个空字符串,
         //如果不加任何参数,默认用逗号隔开;
         // console.log(aArr.join(''));
+
+        //测试toUpperCase()方法,注意只是对字符起作用
+        // console.log(sStr2.toUpperCase());
+
+        //测试toLowerCase()方法
+        var sStr3="GSLHGSLGHSJGLK";
+        // console.log(sStr3.toLowerCase());
+        
+        //测试toString()方法
+        // console.log(sStr3.toString());
+        // console.log(typeof(sStr3));
+        // console.log("kjfhskjc");
+
+        //测试valueOf()方法
+        // console.log(sStr3.valueOf());//字符串是一个伪对象,拥有所有string的方法与属性
+        
+        // console.log(typeof(''));
+        // console.log(typeof(null));//注意null的类型是object;
+        // console.log(typeof(undefined));//
+        // console.log(undefined==null);//结束是true
+        //console.log(undefined===null);//结果是false
+        // console.log(null===null);//结果是true
+        // console.log(NaN==NaN);//结果是false
+        // console.log(''==null);//结果是false
+        // console.log(''==undefined);//结果是false
+
     </script>
 </body>
 </html>
