测试了window下的一些对象与方法

--- a/JS基础/测试window下的内置对象与方法.html
+++ b/JS基础/测试window下的内置对象与方法.html
@@ -10,6 +10,10 @@
     
 
     <script>
+        //返回的是一个boolean类型的值
+        // var bIsAgree=confirm("请选择是否同意");
+        // console.log(bIsAgree);
+
         
     </script>
 </body>
