测试了history对象的使用

--- a/JS基础/测试window下的内置对象与方法.html
+++ b/JS基础/测试window下的内置对象与方法.html
@@ -11,12 +11,17 @@
 
     <button onclick="go()">下一页</button>
     <button onclick="back()">上一页</button>
+    <button onclick="baidu()">kdhdsjkfhjsk</button>
 
     <a href="https://www.hao123.com" onclick="redireced()">好123</a>
     <script>
         //返回的是一个boolean类型的值
         // var bIsAgree=confirm("请选择是否同意");
         // console.log(bIsAgree);
+
+        function baidu(){
+            location.href="https://www.baidu.com";
+        }
 
         function redireced(){
             console.log('132');
