--- a/CSS3测试/三行布局上下高度固定中间高度自适应2.html
+++ b/CSS3测试/三行布局上下高度固定中间高度自适应2.html
@@ -28,6 +28,7 @@
             width: 100%;
             /* height: 100%;既然你已经分配了剩余的空间，就不需要再加100%了 */
             overflow: scroll;
+            /* height: 0px; */
         }
         .footer{
             background: yellow;
