--- a/CSS3测试/测试伪元素选择器.html
+++ b/CSS3测试/测试伪元素选择器.html
@@ -12,7 +12,7 @@
         .box2{
             width: 200px;
             height: 200px;
-            background: red;
+            background: green;
 
             float: left;
         }
