测试了javascript对象中的Array对象

--- a/JS基础/测试javascript对象中的Array对象.html
+++ b/JS基础/测试javascript对象中的Array对象.html
@@ -61,7 +61,13 @@
         // console.log(arr4);//注意实在原数组上面进行的修改
         // console.log(arr6);//返回值是变化后的数组的长度
 
-        //
+        //测试splice()方法
+        // console.log(arr4);
+        // var arr6= arr4.splice(2,0,9000);//注意index是从零开始的，第二个参数是要删除元素的个数
+        // console.log(arr4);
+        // console.log(arr6);//返回值是被删除的元素组成的数组，如果没有删除则返回一个空数组
+
+        
     </script>
 </body>
 </html>
