更新了选项卡

--- a/JS基础/选项卡.html
+++ b/JS基础/选项卡.html
@@ -48,6 +48,7 @@
             border: 1px solid #eee;
             border-top: none;
             display: none;
+            background: #eee;
         }
         #tabs .selected{
             display: block;
@@ -67,12 +68,12 @@
 <body>
     <div id="tabs">
         <ul class="tab-item">
-            <li>大乔</li>
+            <li class="active">大乔</li>
             <li>小乔</li>
             <li>孙尚香</li>
         </ul>
         <div class="content selected" id="content1">
-            <h3 class="ability">大桥的技能：</h3>
+            <h3 class="ability">大乔的技能：</h3>
             <p class="detail">弃之一张手牌可以把受到的敌人的伤害在有限的范围内转移给其他人。</p>
         </div>
         <div class="content" id="content2">
