更新了象棋

--- a/JS基础/象棋.html
+++ b/JS基础/象棋.html
@@ -501,7 +501,7 @@
                     }
                 }
                 else{
-                    wayResult=false; //不能走
+                    wayResult=false; //不能走123
                     if(!tryJiangJun)np.innerHTML="炮步错误 ！";
                     //  console.log("？？不能走");
                 }
