--- a/JS基础/轮播图.html
+++ b/JS基础/轮播图.html
@@ -15,6 +15,7 @@
             width:750px;
             height: 291px;
             margin: 100px auto;
+            position: relative;
         }
 
 
@@ -22,8 +23,33 @@
         #container .images img{
             display: none;
         }
-        #container .selected{
+        #container .images .selected{
             display: block;
+        }
+
+        #container .check-btn li{
+            float: left;
+            list-style: none;
+            background: rgba(0,0,0,0.4);
+            height: 20px;
+            width: 20px;
+            line-height: 20px;
+            text-align: center;
+            margin-right: 5px;
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #container .check-btn{
+            position: absolute;
+            right: 10px;
+            bottom: 10px;
+            /* overflow: hidden; */
+        }
+        
+        #container .check-btn .active{
+            background: #ff0036;
         }
     </style>
 </head>
@@ -37,7 +63,7 @@
             <img src="./img/5.jpg" alt="">
         </div>
         <ul class="check-btn">
-            <li>1</li>
+            <li class="active">1</li>
             <li>2</li>
             <li>3</li>
             <li>4</li>
@@ -45,7 +71,23 @@
         </ul>
     </div>
     <script>
-            
+        var oContainer=document.getElementById("container");
+        var aCheckBtn=oContainer.getElementsByTagName("li");
+
+        var aImages=oContainer.getElementsByTagName("img");
+
+        for(var i=0; i<aCheckBtn.length; ++i){
+            aCheckBtn[i].index=i;
+            aCheckBtn[i].onclick=function(){
+                for(var j=0; j<aCheckBtn.length;++j){
+                    aCheckBtn[j].className="";
+                    aImages[j].className="";
+                }
+                this.className="active";
+                aImages[this.index].className="selected";
+            }
+        }
+
     </script>
 </body>
 </html>
