--- a/JS基础/轮播图.html
+++ b/JS基础/轮播图.html
@@ -51,6 +51,43 @@
         #container .check-btn .active{
             background: #ff0036;
         }
+
+        /* #container .arrow{
+            position: absolute;
+            bottom: 10px;
+            left: 15px;
+            /* background: green; 
+            list-style: none;
+            color: #fff;
+        } 
+
+        /* #container .arrow li{
+            float: left;
+            margin-right: 18px;
+            cursor: pointer;
+            background: rgba(0,0,0,0.1);
+        } */
+
+        #container .arrow{
+            position: absolute;
+            left: 10px;
+            bottom: 7px;
+            height: 25px;
+            width: 80px;
+            color: #fff;
+        }
+        #container .arrow span{
+            margin-right: 10px;
+            font-size: 20px;
+            background: rgba(0,0,0,0.4);
+            border-radius: 5px;
+            float: left;
+            width: 25px;
+            height: 20px;
+            line-height: 20px;
+            text-align: center;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -69,24 +106,75 @@
             <li>4</li>
             <li>5</li>
         </ul>
+
+        <!-- <ul class="arrow">
+            <li class="active">&lt</li>
+            <li>&gt</li>
+        </ul> -->
+        <div class="arrow">
+            <span id="left-arrow">&lt</span>
+            <span id="right-arrow">&gt</span>
+        </div>
     </div>
     <script>
-        var oContainer=document.getElementById("container");
-        var aCheckBtn=oContainer.getElementsByTagName("li");
+        // var oContainer=document.getElementById("container");
+        var aCheckBtn=document.getElementsByClassName("check-btn");
+        var aLi=aCheckBtn[0].getElementsByTagName("li");
 
-        var aImages=oContainer.getElementsByTagName("img");
+        var aImages=document.getElementsByClassName("images");
+        var aImgs=aImages[0].getElementsByTagName("img");
 
-        for(var i=0; i<aCheckBtn.length; ++i){
-            aCheckBtn[i].index=i;
-            aCheckBtn[i].onclick=function(){
-                for(var j=0; j<aCheckBtn.length;++j){
-                    aCheckBtn[j].className="";
-                    aImages[j].className="";
+        // var aArrow=document.getElementsByClassName("arrow");
+        // var aArrowLi=aArrow[0].getElementsByTagName("li");
+        var iNow=0;
+        for(var i=0; i<aLi.length; ++i){
+            aLi[i].index=i;
+            aLi[i].onclick=function(){
+                for(var j=0; j<aLi.length;++j){
+                    aLi[j].className="";
+                    aImgs[j].className="";
                 }
                 this.className="active";
-                aImages[this.index].className="selected";
+                aImgs[this.index].className="selected";
+                iNow=this.index;
             }
         }
+
+        var oNext=document.getElementById("right-arrow");
+        var oPre=document.getElementById("left-arrow");
+
+
+        oNext.onclick=function(){
+            iNow++;
+            for(var i=0; i<aLi.length;++i){
+                aLi[i].className="";
+                aImgs[i].className="";
+            }
+
+            if(iNow==aLi.length){
+                iNow=0;
+            }
+
+            aLi[iNow].className="active";
+            aImgs[iNow].className="selected";
+        }
+
+        oPre.onclick=function(){
+            iNow--;
+            for(var i=0; i<aLi.length;++i){
+                aLi[i].className="";
+                aImgs[i].className="";
+            }
+
+            if(iNow==-1){
+                iNow=aLi.length-1;
+            }
+
+            aLi[iNow].className="active";
+            aImgs[iNow].className="selected";
+        }
+
+        
 
     </script>
 </body>
